# pythonUtility

./: .gitignore  .readthedocs.yaml  README.md  README.rst  Readme.rst  _config.yml  index.html  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: dependency-review.yml
data/db/: create_table.sql
docs/: requirements.txt
docs/source/: conf.py  index.rst  pathoperation.rst  usage.rst
pythonutility.egg-info/: PKG-INFO  SOURCES.txt
pythonutility/processcsv/: groupby_col.py  lookupcsv.py  splitcsv.py  unique_items.py
src/: create_folder.py  lookupcsv.py  main.py  processcsv.py
src/pathoperation/: create_folder.py
src/processcsv/: lookupcsv.py  processcsv.py  sanitize.py  splitcsv.py  unique_items.py
src/pythonUtility/cl_config/: cl_config.py
src/pythonUtility/pathoperation/: createfolder.py
src/pythonUtility/processcsv/: splitcsv.py  unique_items.py
src/pythonutility.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: function_test.py
