[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default

[project]
name="pythonutility"
readme = "readme.rst"
version="0.1.0"
description="Python untility library"
authors = [{name="Lizzie Zhou"}]
maintainers = [{name="Lizzie Zhou"}]
license = {file = "license.txt"}
requires-python = ">= 3.8"

[project.urls]
Documentation = "https://pythonutility.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/Joylizzie/pythonUtility.git"
"Bug Tracker" = "https://github.com/Joylizzie/pythonUtility/issues"